--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <h1>
+            Eleve seu negócio digital a outro nível <strong> com um Front-end de qualidade!</strong>
+        </h1>
+        <p>Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos
+            negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+        <a href="https://www.instagram.com">Instagram</a>
+        <a href="https://github.com">Github</a>
+        <img src="Imagem.png" alt="texto alternativo">
+    </main>
     <footer></footer>
 </body>
 
