--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header></header>
     <main>
         <h1>
-            Eleve seu negócio digital a outro nível <strong> com um Front-end de qualidade!</strong>
+            Eleve seu negócio digital a outro nível <strong class="title"> com um Front-end de qualidade!</strong>
         </h1>
         <p>Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos
             negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
