--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header></header>
-    <main>
+    <main class="apresention">
         <h1>
             Eleve seu negócio digital a outro nível <strong class="title"> com um Front-end de qualidade!</strong>
         </h1>
