--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 <body>
     <header></header>
     <main class="apresention">
-        <h1>
-            Eleve seu negócio digital a outro nível <strong class="title"> com um Front-end de qualidade!</strong>
-        </h1>
-        <p>Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos
-            negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-        <a href="https://www.instagram.com">Instagram</a>
-        <a href="https://github.com">Github</a>
+        <section>
+            <h1>
+                Eleve seu negócio digital a outro nível <strong class="title"> com um Front-end de qualidade!</strong>
+            </h1>
+            <p>Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos
+                negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <a href="https://www.instagram.com">Instagram</a>
+            <a href="https://github.com">Github</a>
+        </section>
         <img src="Imagem.png" alt="texto alternativo">
     </main>
     <footer></footer>
