--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <header></header>
     <main class="apresention">
-        <section>
-            <h1>
+        <section class="apresentacao">
+            <h1 class="titulo">
                 Eleve seu negócio digital a outro nível <strong class="title"> com um Front-end de qualidade!</strong>
             </h1>
-            <p>Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos
+            <p class="texto">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos
                 negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <a href="https://www.instagram.com">Instagram</a>
             <a href="https://github.com">Github</a>
