--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
             <h1 class="titulo">
                 Eleve seu negócio digital a outro nível <strong class="title"> com um Front-end de qualidade!</strong>
             </h1>
-            <p class="texto">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos
+            <p class="texto">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS.
+                Ajudo pequenos
                 negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-            <a href="https://www.instagram.com">Instagram</a>
-            <a href="https://github.com">Github</a>
+            <div class="links">
+                <a href="https://www.instagram.com">Instagram</a>
+                <a href="https://github.com">Github</a>
+            </div>
         </section>
         <img src="Imagem.png" alt="texto alternativo">
     </main>
