--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 Ajudo pequenos
                 negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="links">
-                <a href="https://www.instagram.com">Instagram</a>
-                <a href="https://github.com">Github</a>
+                <a class="links_links" href="https://www.instagram.com">Instagram</a>
+                <a class="links_links" href="https://github.com">Github</a>
             </div>
         </section>
         <img src="Imagem.png" alt="texto alternativo">
